# smart-locker

./: .gitignore  main.cpp.api.backup  plan.md
server/: Cargo.toml
server/migrations/: 001_create_devices_table.sql  002_create_pins_table.sql  003_create_qr_sessions_table.sql  006_create_users_table.sql  007_create_packages_table.sql  008_add_package_to_pins.sql
server/src/: auth.rs  db.rs  main.rs  package.rs  pin.rs  qr.rs  rate_limit.rs  sms.rs
src/: main.cpp
